# ScriptingLanguage

./: .gitignore  CMakeLists.txt  README.md
cmake/scripts/linux/: gencmake.sh  rebuild.sh
cmake/scripts/win64/: build.bat  gencmake.bat  rebuild.bat
data/: basic.test
src/: ASTree.cpp  ASTree.h  CMakeLists.txt  common.cpp  common.h  errors.cpp  errors.h  executor.cpp  executor.h  keywords.cpp  keywords.h  logger.cpp  logger.h  stack.cpp  stack.h  tokeniser.cpp  tokeniser.h  types.cpp  types.h  variables.cpp  variables.h  win32_harness.cpp
